$Id: History,v 1.23 2002-05-30 16:38:37 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N04 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 30, 2002  Makoto Asai (exampleN04-V04-00-01)
- Fixed the size of the muon counter.
     
May 02, 2002  Michel Maire
- Added tools for interactive session:
  UItcsh, visualisation of tracks, saving random engine status.
- Drawing of hits (in EventAction) are temporarly deactivated.  

December 18, 2001  Gabriele Cosmo (exampleN04-V04-00-00)
- ExN04PhysicsList.cc: added call to DumpCutValuesTable().
  Reference outputs will be modified (V.Ivantchenko)
- GNUmakefile: removed restriction for egcs compiler

October 19, 2001  Steve O'Neale
- Updated reference output

March 07 2001 H.Kurashige (exampleN04-V03-00-07)
-  Add G4MuonMinusCaptureAtRest in G4MuonPhysics 

February 25 2001 S.W.O'Neale (exampleN04-V03-00-06)
- Add exampleN04.EMtest.large_N.out reference output and remove
  some empty "reference" .err files

February 20 2001 S.W.O'Neale (exampleN04-V03-00-05)
- Update reference outputs following materials-V03-00-04  

February 9 2001 S.W.O'Neale (exampleN04-V03-00-04)
- Update SUN CC reference outouts for test104 and test104.EMtest

February 9 2001 H.Kurashige (exampleN04-V03-00-03)
- Introduce Modular Physics List

25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for min.delta energy cut